Fixed modal overflow bug

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,9 @@ $shadow-contour: 0 0 7px 1px rgba(0,0,0,0.2);
 $shadow-inner: inset 0px 0px 2px 3px rgba(0,0,0,0.2);
 
 //General
+html {
+	overflow-x: hidden;
+}
 body {
 	font-family: 'Open Sans', sans-serif;
 	color: $color-grey-6;
